BUG z770, 5229, 5230, 5228: Various fixes * Make highlighted calendar events use dark text so they are readable * Stop an error during a column select from the sidebar because there is a click on the document * Don't handle resize triggers during a sidebar resize to speed it up * Make un-uniformed select boxes the proper size
QA: Make sure bugs are fixed. Resizing the sidebar in IE7 should be more
responsive now. In calendars, when hovering over an item, the text
should now be dark so it is readable against the light background.

--- a/app/styles/screen-calendar.sass
+++ b/app/styles/screen-calendar.sass
@@ -21,3 +21,6 @@
       padding:
         bottom: 0.3em
         top: 0.6em
+
+.fc-event.highlight .fc-event-inner
+  color: #333333
